<resources>
    <string name="app_name">Code Quality test on Android App Development</string>
    <string name="loading">loading</string>
    <string name="tap_to_retry">tap_to_retry</string>
    <string name="error_no_internet">Error no Internet</string>
    <string name="enter_your_user_name">User Name</string>
    <string name="enter_your_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Login</string>
    <string name="agree_description">I Agree to the terms and conditions </string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="registration">Registration</string>
    <string name="hint">search ....</string>

    <string name="map_key" translatable="false">
        AIzaSyCy5GqbfW9pP1rW7xVMssq6va_17hckONw
    </string>

</resources>